--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,10 @@
 baseurl = "https://shohan4556.github.io/me/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-title = "Academic"
+title = "Hello !"
 publishDir = "docs"
-copyright = "&copy; 2017 Your Name"
+copyright = "&copy; 2017 Shohan"
 theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
@@ -21,17 +20,17 @@ defaultContentLanguageInSubdir = false
   hrefTargetBlank = true
 
 [params]
-  name = "Lena Smith"
-  role = "Professor of Artificial Intelligence"
-  organization = "Stanford University"
+  name = "Shohanur Rahaman"
+  role = "Indie Game Developer"
+  organization = ""
   organization_url = ""
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
-  email = "test@example.org"
-  address = "Building 1 Room 1, Stanford University, California, 90210, USA"
-  office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  phone = "888 888 88 88"
-  skype = "echo123"
+  email = "shohan4556@gmail.com"
+  address = "New Building - 501 (5th) floor, Wapda staff quarter. Jatrabari, Dhaka - 1204"
+  #office_hours = "Monday 10:00 to 13:00 or email for appointment"
+  phone = "+88 01831145451"
+  skype = "shohan4556"
   telegram = ""
 
   # Enable Keybase in Contact section by entering your keybase.io username.
@@ -39,7 +38,7 @@ defaultContentLanguageInSubdir = false
 
   # Date format (refer to Go's date format: http://flippinggodateformat.com )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-  date_format = "Jan 2, 2006"
+  date_format = "Mon, Jan 2, 2006"
 
   # Enable global LaTeX math rendering?
   #   If false, you can enable it locally on a per page basis.
@@ -79,8 +78,8 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://gcushen.github.io/hugo-academic-demo/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = []
-  # highlight_style = "github"
+  highlight_languages = ["go", "lisp", "ocaml", "c#"]
+  highlight_style = "github-gist"
   # highlight_version = "9.9.0"
 
   # Enable native social sharing buttons?
@@ -128,22 +127,22 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "mailto:test@example.org"
+    link = "mailto:shohan4556@egmail.com"
 
   [[params.social]]
     icon = "twitter"
     icon_pack = "fa"
-    link = "//twitter.com/GeorgeCushen"
+    link = "//twitter.com/shohan4556"
 
   [[params.social]]
-    icon = "google-scholar"
-    icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    icon = "linkedin"
+    icon_pack = "fa"
+    link = "https://www.linkedin.com/in/shohan4556/"
 
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
-    link = "//github.com/gcushen"
+    link = "//github.com/shohan4556"
 
 
 # Navigation Links
@@ -157,11 +156,6 @@ defaultContentLanguageInSubdir = false
   weight = 1
 
 [[menu.main]]
-  name = "Publications"
-  url = "#publications_selected"
-  weight = 2
-
-[[menu.main]]
   name = "Posts"
   url = "#posts"
   weight = 3
@@ -172,7 +166,7 @@ defaultContentLanguageInSubdir = false
   weight = 4
 
 [[menu.main]]
-  name = "Teaching"
+  name = "Experience"
   url = "#teaching"
   weight = 5
 
@@ -188,8 +182,3 @@ defaultContentLanguageInSubdir = false
   publication_type = "publication_types"
 
 # Languages
-#   Create a [languages.X] block for each language you want, where X is the language ID.
-
-# Configure the English version of the website.
-[Languages.en]
-  languageCode = "en-us"
