quiz game projcet added

--- a/config.toml
+++ b/config.toml
@@ -142,7 +142,7 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "linkedin"
     icon_pack = "fa"
-    link = "https://www.linkedin.com/in/shohan4556/"
+    link = "https://www.linkedin.com/in/shohanr/"
 
   [[params.social]]
     icon = "github"
